--- a/03_tickers.ipynb
+++ b/03_tickers.ipynb
@@ -453,6 +453,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "CONTINUE HERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
