Added comparison of parquet

--- a/02_market_hours.ipynb
+++ b/02_market_hours.ipynb
@@ -295,7 +295,7 @@
     "            return m1\n",
     "\n",
     "        if to_parquet:\n",
-    "            m1.to_parquet(path, engine=\"pyarrow\", compression=\"brotli\")\n",
+    "            m1.to_parquet(path, engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)\n",
     "        else:\n",
     "            m1.to_csv(path)\n",
     "    else:\n",
