--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -48,7 +48,7 @@
     "1. An introduction to the problems with the Polygon ticker list. There are many.\n",
     "2. Get market hours.\n",
     "3. Solve the ticker problems to create a correct list of tickers.\n",
-    "4. Add ETFs. *(optional)*\n",
+    "4. Add ETPs. *(optional)*\n",
     "5. Download adjustments.\n",
     "6. Download raw prices.\n",
     "7. Data cleaning. **Postponed**\n",
@@ -2341,300 +2341,6 @@
    "metadata": {},
    "source": [
     "There are a whopping 4347 ticker changes from 2003 to now that we have to take care of. But at least this was very easy to get."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1.8 Extra ETFs and indices ##\n",
-    "We now only have a list of stocks. But we might also want to trade SPY, TLT or VXX. This section will append the <code>tickers_v2.csv</code> with a selection of ETFs to create <code>tickers_v3.csv</code>. Indices such as the VIX may also be of interest although Polygon does not have it. For these special cases, we will manually append them. We will add a prefix to non-tradeable tickers, so VIX and SPX become $VIX and $SPX. I am only interested in a selection of ETFs and indices; these were found by taking the most liquid ETF in its category at [etfdb.com](etfdb.com).\n",
-    "\n",
-    "* Size ETFs: \"SPY\", \"IJH\", \"IJR\", \n",
-    "    * Large-cap, Mid-cap, Small-cap, \n",
-    "* Bond ETFs: \"BIL\", \"SHY\", \"IEF\", \"TLT\", \"JPST\", \"VCSH\", \"VCIT\", \"VCLT\" \n",
-    "    * risk-free (1-3M, 1-3Y, 7-10Y, 20+Y), corporate (Overnight, 1-5Y, 5-10Y, 10-25Y)\n",
-    "* Sector ETFs: \"XLE\", \"XLU\", \"XLK\", \"XLB\", \"XLP\", \"XLY\", \"XLC\", \"XLV\", \"XLF\", \"XLRE\"\n",
-    "    * The sectors that Finviz also uses.\n",
-    "* Commodity ETFs \"GLD\", \"SLV\"\n",
-    "    * Gold, silver\n",
-    "* Volatility ETFs: \"VXX\", \"UVIX\", \"SVIX\", \"SVXY\"\n",
-    "    * Long, Long 2X, Short 1x, Short 0.5x (1x before and including 2018-02-27)\n",
-    "\n",
-    "The only non-ETF index that I am interested in is the VIX. I will manually download daily VIX data from Yahoo and name it $VIX and set the type to INDEX. I could not find free 1-minute data. For simplicity I will just put this in the Polygon folder and not in a seperate Yahoo folder."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "###\n",
-    "size_ETFs = [\"SPY\", \"IJH\", \"IJR\"]\n",
-    "bond_ETFs = [\"BIL\", \"SHY\", \"IEF\", \"TLT\", \"JPST\", \"VCSH\", \"VCIT\", \"VCLT\" ]\n",
-    "sector_ETFs = [\"XLE\", \"XLU\", \"XLK\", \"XLB\", \"XLP\", \"XLY\", \"XLC\", \"XLV\", \"XLF\", \"XLRE\"]\n",
-    "commodity_ETFs = [\"GLD\", \"SLV\"]\n",
-    "volatility_ETFs = [\"VXX\", \"UVIX\", \"SVIX\", \"SVXY\"]\n",
-    "all_ETFs = size_ETFs + bond_ETFs + sector_ETFs + commodity_ETFs + volatility_ETFs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>name</th>\n",
-       "      <th>active</th>\n",
-       "      <th>start_date</th>\n",
-       "      <th>end_date</th>\n",
-       "      <th>type</th>\n",
-       "      <th>cik</th>\n",
-       "      <th>composite_figi</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>BIL</td>\n",
-       "      <td>SPDR Bloomberg 1-3 Month T-Bill ETF</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>0001064642</td>\n",
-       "      <td>BBG000RFQSH8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IEF</td>\n",
-       "      <td>iShares 7-10 Year Treasury Bond ETF</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>0001100663</td>\n",
-       "      <td>BBG000BHR296</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IJH</td>\n",
-       "      <td>iShares Core S&amp;P Mid-Cap ETF</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ETF</td>\n",
-       "      <td>0001100663</td>\n",
-       "      <td>BBG000BWC7P0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   ID ticker                                 name  active  start_date  \\\n",
-       "0 NaN    BIL  SPDR Bloomberg 1-3 Month T-Bill ETF    True         NaN   \n",
-       "1 NaN    IEF  iShares 7-10 Year Treasury Bond ETF    True         NaN   \n",
-       "2 NaN    IJH         iShares Core S&P Mid-Cap ETF    True         NaN   \n",
-       "\n",
-       "   end_date type         cik composite_figi  \n",
-       "0       NaN  ETF  0001064642   BBG000RFQSH8  \n",
-       "1       NaN  ETF  0001100663   BBG000BHR296  \n",
-       "2       NaN  ETF  0001100663   BBG000BWC7P0  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "###\n",
-    "ticker_list_ETF = client.list_tickers(type=\"ETF\", date=END_DATE.isoformat(), active=True, market='stocks', limit=1000)\n",
-    "ticker_list_ETN = client.list_tickers(type=\"ETN\", date=END_DATE.isoformat(), active=True, market='stocks', limit=1000)\n",
-    "ticker_list_ETV = client.list_tickers(type=\"ETV\", date=END_DATE.isoformat(), active=True, market='stocks', limit=1000)\n",
-    "\n",
-    "ticker_list_ETF = pd.DataFrame(ticker_list_ETF)\n",
-    "ticker_list_ETN = pd.DataFrame(ticker_list_ETN)\n",
-    "ticker_list_ETV = pd.DataFrame(ticker_list_ETV)\n",
-    "\n",
-    "tickers_ETP = pd.concat([ticker_list_ETF, ticker_list_ETN, ticker_list_ETV]).reset_index()\n",
-    "tickers_ETP = tickers_ETP[['ticker', 'name', 'active', 'cik', 'composite_figi', 'type']]\n",
-    "tickers_ETP = tickers_ETP[tickers_ETP[\"ticker\"].isin(all_ETFs)]\n",
-    "tickers_ETP = tickers_ETP.reindex(columns = [\"ID\", \"ticker\", \"name\", \"active\", \"start_date\", \"end_date\", \"type\", \"cik\", \"composite_figi\"]) \n",
-    "tickers_ETP.reset_index(drop=True, inplace=True)\n",
-    "\n",
-    "tickers_ETP.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "###\n",
-    "# Fill start_date by getting the start date from get_ticker_events. I assume no renamings.\n",
-    "for index, row in tickers_ETP.copy().iterrows():\n",
-    "    if row[\"type\"] == \"ETF\" or row[\"type\"] == \"ETN\" or row[\"type\"] == \"ETV\":\n",
-    "        try:\n",
-    "            tickers_ETP.iloc[index, tickers_ETP.columns.get_loc(\"start_date\")] = max(date.fromisoformat(client.get_ticker_events(row[\"ticker\"]).events[-1]['date']), START_DATE)\n",
-    "        except Exception as e:\n",
-    "            tickers_ETP.iloc[index, tickers_ETP.columns.get_loc(\"start_date\")] = START_DATE\n",
-    "            print(row[\"ticker\"])\n",
-    "            print(repr(e))\n",
-    "\n",
-    "# Set remaining columns\n",
-    "tickers_ETP[\"end_date\"].fillna(END_DATE, inplace=True)\n",
-    "tickers_ETP[\"ID\"] = tickers_ETP[\"ticker\"] + '-' + tickers_ETP[\"start_date\"].astype(str)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally, manually add a ^VIX."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "###\n",
-    "tickers_ETP.loc[len(tickers_ETP)] = f'$VIX-{START_DATE.isoformat()}', '$VIX', 'VIX Index', True, START_DATE, END_DATE, 'INDEX', np.NaN, np.NaN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>name</th>\n",
-       "      <th>active</th>\n",
-       "      <th>start_date</th>\n",
-       "      <th>end_date</th>\n",
-       "      <th>type</th>\n",
-       "      <th>cik</th>\n",
-       "      <th>composite_figi</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7590</th>\n",
-       "      <td>GLD-2019-01-01</td>\n",
-       "      <td>GLD</td>\n",
-       "      <td>SPDR Gold Trust, SPDR Gold Shares</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>2023-09-01</td>\n",
-       "      <td>ETV</td>\n",
-       "      <td>0001222333</td>\n",
-       "      <td>BBG000CRF6Q8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7591</th>\n",
-       "      <td>SLV-2019-01-01</td>\n",
-       "      <td>SLV</td>\n",
-       "      <td>iShares Silver Trust</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>2023-09-01</td>\n",
-       "      <td>ETV</td>\n",
-       "      <td>0001330568</td>\n",
-       "      <td>BBG000NDCRW7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7592</th>\n",
-       "      <td>$VIX-2019-01-01</td>\n",
-       "      <td>$VIX</td>\n",
-       "      <td>VIX Index</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>2023-09-01</td>\n",
-       "      <td>INDEX</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   ID ticker                               name  active  \\\n",
-       "7590   GLD-2019-01-01    GLD  SPDR Gold Trust, SPDR Gold Shares    True   \n",
-       "7591   SLV-2019-01-01    SLV               iShares Silver Trust    True   \n",
-       "7592  $VIX-2019-01-01   $VIX                          VIX Index    True   \n",
-       "\n",
-       "      start_date    end_date   type         cik composite_figi  \n",
-       "7590  2019-01-01  2023-09-01    ETV  0001222333   BBG000CRF6Q8  \n",
-       "7591  2019-01-01  2023-09-01    ETV  0001330568   BBG000NDCRW7  \n",
-       "7592  2019-01-01  2023-09-01  INDEX         NaN            NaN  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "###\n",
-    "# Merge tickers_v2 and ETFs to get tickers_v3\n",
-    "tickers_v2 = get_tickers(v=2)\n",
-    "tickers_v3 = pd.concat([tickers_v2, tickers_ETP])\n",
-    "tickers_v3.reset_index(drop=True, inplace=True)\n",
-    "tickers_v3.to_csv(\"../../../data/tickers_v3.csv\") \n",
-    "tickers_v3.tail(3)"
    ]
   },
   {
