--- a/05_adjustments.ipynb
+++ b/05_adjustments.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adjustment factors\n",
+    "# 5.1 Adjustments\n",
     "Adjustment factors are stored in the Polygon folder under <code>raw/adjustments/AAPL.csv</code>. If a ticker is recycled, then this file has the adjustment factors for all the companies associated with the ticker. To get the adjustments, we simply use the <code>Stock Splits</code> and <code>Dividends</code> endpoint through the SDK. These are <code>list_splits</code> and <code>list_dividends</code>. \n",
     "\n",
     "Ex-dividend is the date when the investor does *not* get the dividend. If an investor held the stock before, he does. So on ex-dividend date the stock on average drops with the dividend. We need to add the dividends back to the stock price. Or subtract them from before ex-dividend. Most platforms do the backwards adjustments so I will also do that. The advantage is that the current price in the data is then unadjusted and thus equal to the actual market price.\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = \"../../../data/polygon/\"\n",
+    "DATA_PATH = \"../data/polygon/\"\n",
     "\n",
-    "START_DATE = datetime(2019, 1, 1).date() \n",
-    "END_DATE = datetime(2023, 9, 1).date()\n",
+    "START_DATE = date(2019, 1, 1)\n",
+    "END_DATE = date(2023, 9, 1)\n",
     "\n",
     "CLEAN_DOWNLOAD = True # If False, only update existing data to the END_DATE. If True, remove all files in adjustments/.\n",
     "\n",
@@ -49,9 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MaxRetryError(\"HTTPSConnectionPool(host='api.polygon.io', port=443): Max retries exceeded with url: /v3/reference/dividends?ticker=SMRT&ex_dividend_date.lte=2020-08-21&ex_dividend_date.gte=2019-01-01 (Caused by NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x0000020387E753D0>: Failed to establish a new connection: [WinError 10061] No connection could be made because the target machine actively refused it'))\")\n"
+     ]
+    }
+   ],
    "source": [
     "# Loop through all tickers\n",
     "tickers_v3 = get_tickers(v=3)\n",
@@ -142,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example: MFA had a reverse split and some dividends."
+    "Some examples."
    ]
   },
   {
@@ -322,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -346,16 +354,26 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
        "      <th>type</th>\n",
        "      <th>subtype</th>\n",
        "      <th>amount</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-08-25</td>\n",
+       "      <th>2020-08-31</th>\n",
+       "      <td>SPLIT</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-25</th>\n",
        "      <td>SPLIT</td>\n",
        "      <td>N</td>\n",
        "      <td>0.333333</td>\n",
@@ -365,11 +383,13 @@
        "</div>"
       ],
       "text/plain": [
-       "         date   type subtype    amount\n",
-       "0  2022-08-25  SPLIT       N  0.333333"
+       "             type subtype    amount\n",
+       "date                               \n",
+       "2020-08-31  SPLIT       N  0.200000\n",
+       "2022-08-25  SPLIT       N  0.333333"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,6 +405,13 @@
     "### Updates\n",
     "Simply rerun the file with the correct <code>END_DATE</code> and set <code>CLEAN_DOWNLOAD</code> to False."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
