--- a/06_download_bars.ipynb
+++ b/06_download_bars.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "# Downloading raw prices\n",
-    "Because we already created functions in notebook 1 to download 1-minute tickers, this is easy. We need to keep in mind that a lot of stocks such as SPACs have almost no price data. So there are a lot of empty bars. Some stocks don't even have 1 trade for the entire day. However, I cannot remove them either. Because if for one week the stock has a lot of activity, my trading systems may still trade it."
+    "Because we already created functions in notebook 1 to download 1-minute tickers, this is easy. We need to keep in mind that a lot of stocks such as SPACs have almost no price data. So there are a lot of empty bars. Some stocks don't even have 1 trade for the entire day. However, I cannot remove them either. Because if for one week the stock has a lot of activity, my trading systems may still trade it. That is the curse of the HTB small caps space. I cannot just filter on monthly liquidity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "DATA_PATH = \"../../../data/polygon/\"\n",
+    "DATA_PATH = \"../data/polygon/\"\n",
     "\n",
     "with open(DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -36,18 +36,28 @@
    "source": [
     "**Non-parallel approach**\n",
     "\n",
-    "Downloading 100 stocks for 2021-01 to 2023-08 took 10 minutes and took 538 MB. To download all stocks (assume 6000) takes 600 minutes or 10 hours or 32 GB. To download from 2004 up to now takes around 70 hours or 224 GB.\n",
+    "Downloading outside of market hours is much faster.\n",
     "\n",
-    "So instead of csv's we use <code>Parquet</code>. This saves a lot of disk space while sacrificing human readibility. Although you can just use [tad](https://www.tadviewer.com/) (does not work with brotli compression) or [ParquetViewer](https://github.com/mukunku/ParquetViewer/releases). And pandas already supports reading from Parquet files. Parquet only takes up 37.6% of the csv size based on a small sample. The parquet database (default snappy compression) from 2021-01 to 2023-08 takes up 13.8 GB in space, which would have taken 36.7 GB with csv's. To save even more disk space, I use the brotli compression algorithm, which only has 60% of the size of the standard snappy compression. However it is x1.28 slower. That seems like a good trade-off. Also, reading is very fast (~0.1 sec for almost 5 years of AAPL).\n",
+    "So instead of csv's we use <code>Parquet</code>. This saves a lot of disk space while sacrificing human readibility. Although you can just use [tad](https://www.tadviewer.com/) or [ParquetViewer](https://github.com/mukunku/ParquetViewer/releases). And pandas already supports reading from Parquet files. \n",
     "\n",
-    "In the future when I know SQL I will build a proper database."
+    "In <code>06_fastparquet.ipynb</code> you can see a comparison between parquet compression algorithms and csv's. We save more than 50% in disk space, while write speeds are more than x7.\n",
+    "\n",
+    "Downloading the data takes around 20 hours for data from 2019-01-01 to 2023-09-01. However this only has to be done once, after which you only update (append)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress: 14.1% | ETA: 15 hours and 30 minutes\n"
+     ]
+    }
+   ],
    "source": [
     "tickers = get_tickers(v=3)\n",
     "tickers = tickers[tickers[\"type\"].isin([\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])]\n",
@@ -60,6 +70,9 @@
     "downloaded_days = timedelta(0)\n",
     "\n",
     "for index, row in tickers.iterrows():\n",
+    "    if index < 317:\n",
+    "        continue\n",
+    "\n",
     "    id = row[\"ID\"]\n",
     "    ticker = row[\"ticker\"]\n",
     "    start_date = row[\"start_date\"]\n",
@@ -84,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,11 +109,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Parallel approach**\n",
+    "**Parallel approach (may not work now)**\n",
     "\n",
     "The Polygon API uses the <code>requests</code> library which does not support asynchrounous processing. So I have to use <code>aiohttp</code> and work with raw requests. Also we have to bother with pagination because of the 50000 limit.\n",
     "\n",
-    "I used ChatGPT to convert the code above to work with aiohttp. However it did not work. After manually debugging, I got it working and the file is now in <code>3_get_prices_parallel.py</code>. You can specify the maximum amount of parallel requests. Setting it to 10 should make downloading 10 times faster. Be wary to not generate too many requests."
+    "I used ChatGPT to convert the code above to work with aiohttp. However it did not work. After manually debugging, I got it working and the file is now in <code>06_parallel.py</code>. You can specify the maximum amount of parallel requests. Setting it to 10 should make downloading 10 times faster. Be wary to not generate too many requests."
    ]
   },
   {
