incorrect classified tickers are now stored for future updates

--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "The series of notebooks:\n",
     "1. An introduction to the problems with the Polygon ticker list. There are many.\n",
-    "2. Get market hours.\n",
+    "2. Get market hours. [U]\n",
     "3. Solve the ticker problems to create a correct list of tickers.\n",
     "4. Add ETPs. *(optional)*\n",
     "5. Download adjustments.\n",
