--- a/03_tickers.ipynb
+++ b/03_tickers.ipynb
@@ -10,11 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#####\n",
+    "###\n",
     "from polygon.rest import RESTClient\n",
     "from datetime import datetime, date, time, timedelta\n",
     "from pytz import timezone\n",
@@ -30,7 +30,7 @@
     "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
     "\n",
     "START_DATE = date(2019, 1, 1)\n",
-    "END_DATE = date(2023, 9, 1)\n",
+    "END_DATE = date(2023, 9, 7)\n",
     "\n",
     "with open(POLYGON_DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -90,7 +90,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded tickers for 2023-09-05\n",
+      "Downloaded tickers for 2023-09-06\n",
+      "Downloaded tickers for 2023-09-07\n"
+     ]
+    }
+   ],
    "source": [
     "###\n",
     "# Get a list of what we already have\n",
@@ -104,6 +114,26 @@
     "        tickers = download_tickers(day)\n",
     "        tickers.to_csv(POLYGON_DATA_PATH + f\"raw/tickers/{day.isoformat()}.csv\")\n",
     "        print(f\"Downloaded tickers for {day.isoformat()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2023, 9, 1)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trading_dates[-1]"
    ]
   },
   {
@@ -954,7 +984,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###\n",
     "market_days = get_market_dates()\n",
     "\n",
     "first_trading_date_after_start_date = first_trading_date_after_equal(START_DATE)\n",
@@ -2065,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2126,14 +2155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2908\n",
+      "2918\n",
       "[['A', {0, 1, 2, 3}], ['AADI', {12, 13}], ['AAN', {18, 19, 20, 21, 22}]]\n"
      ]
     }
@@ -2152,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2188,7 +2217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2222,16 +2251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9692"
+       "9697"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2399,7 +2428,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "533\n"
+      "534\n"
      ]
     },
     {
@@ -2528,7 +2557,7 @@
     {
      "data": {
       "text/plain": [
-       "9159"
+       "9163"
       ]
      },
      "execution_count": 28,
@@ -2561,7 +2590,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "174\n"
+      "175\n"
      ]
     },
     {
@@ -3237,6 +3266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "###\n",
     "indices_to_remove = funds.index.union(notes.index).union(tickers_w.index).union(when_issued_or_ex_distr.index).union(wd_suffix.index)"
    ]
   },
@@ -3249,8 +3279,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9159\n",
-      "8771\n"
+      "9163\n",
+      "8775\n"
      ]
     }
    ],
@@ -3447,12 +3477,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tickers_v1[\"ID\"] = tickers_v1[\"ticker\"] + '-' + tickers_v1[\"start_date\"].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###\n",
-    "indices_to_remove = []\n",
+    "### (OPTIONAL, TAKE A LONG TIME)\n",
+    "IDs_to_remove = []\n",
     "for index, row in tickers_v1.copy().iterrows():\n",
     "    try:\n",
     "        # The get_ticker_details is extremely slow.\n",
@@ -3465,28 +3504,46 @@
     "    print(index)\n",
     "\n",
     "    if type_before_start != 'CS' or type_after_end != 'CS':\n",
-    "        indices_to_remove.append(index)"
+    "        IDs_to_remove.append(row['ID'])\n",
+    "\n",
+    "# Write to file. We need this later to make updating easier.\n",
+    "import csv\n",
+    "with open(POLYGON_DATA_PATH + f'raw/IDs_to_remove.csv', 'w') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(IDs_to_remove)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8771\n",
-      "8163\n"
+      "8775\n",
+      "8167\n"
      ]
     }
    ],
    "source": [
     "###\n",
+    "with open(POLYGON_DATA_PATH + f'raw/IDs_to_remove.csv', 'r') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    IDs_to_remove = next(reader)\n",
+    "\n",
     "print(len(tickers_v1))\n",
-    "tickers_v1 = tickers_v1.drop(index=indices_to_remove)\n",
+    "tickers_v1 = tickers_v1[~tickers_v1['ID'].isin(IDs_to_remove)]\n",
+    "tickers_v1.reset_index(inplace=True, drop=True)\n",
     "print(len(tickers_v1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a ridiculous amount of misclassified common stocks."
    ]
   },
   {
@@ -3498,15 +3555,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total tickers: 8163\n",
-      "Unique tickers: 8009\n"
+      "Total tickers: 8167\n",
+      "Unique tickers: 8012\n"
      ]
     }
    ],
@@ -3514,7 +3571,7 @@
     "###\n",
     "print(f\"Total tickers: {len(tickers_v1)}\")\n",
     "print(f\"Unique tickers: {len(tickers_v1['ticker'].unique())}\")\n",
-    "tickers_v1[\"ID\"] = tickers_v1[\"ticker\"] + '-' + tickers_v1[\"start_date\"].astype(str)\n",
+    "\n",
     "tickers_v1 = tickers_v1.reset_index(drop=True)\n",
     "tickers_v1 = tickers_v1[[\"ID\", \"ticker\", \"name\", \"active\", \"start_date\", \"end_date\", \"type\", \"cik\", \"composite_figi\"]]\n",
     "tickers_v1.to_csv(\"../data/tickers_v2.csv\")"
@@ -3538,7 +3595,100 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 3.7 Updates\n",
+    "1. Update END_DATE.\n",
+    "2. Run the 3 ### cells in 3.1. This updates the folder of ticker lists. It takes around 7 seconds per day.\n",
+    "3. Run the cell below to update <code>tickers_v1</code>. Instead of merging all ticker lists, only the new ones are merged.\n",
+    "4. Run the cells with ### in 3.5 and 3.6 to update <code>tickers_v2</code>. We skip checking if a stock is a common stock is not because it is very time consuming. If you do not want to skip it, run the '### (OPTIONAL)' row."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-09-05: Amount of stocks 14794\n",
+      "2023-09-06: Amount of stocks 14799\n",
+      "2023-09-07: Amount of stocks 14802\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import get_tickers\n",
+    "\n",
+    "tickers_v1 = get_tickers(1, cik_as_float=False)\n",
+    "current_end_date = tickers_v1['end_date'].max()\n",
+    "\n",
+    "market_days = get_market_dates()\n",
+    "first_trading_date_after_current_end_date = first_trading_date_after_equal(current_end_date + timedelta(days=1))\n",
+    "last_trading_date_before_end_date = last_trading_date_before_equal(END_DATE)\n",
+    "\n",
+    "for day in market_days:\n",
+    "    if day == current_end_date:\n",
+    "        our_tickers = tickers_v1\n",
+    "\n",
+    "    elif day >= first_trading_date_after_current_end_date and day <= END_DATE:\n",
+    "        # Get new ticker list to update ours\n",
+    "        tickers_day_i = pd.read_csv(\n",
+    "            POLYGON_DATA_PATH + f\"raw/tickers/{day.isoformat()}.csv\",\n",
+    "            index_col=0,\n",
+    "            keep_default_na=False,\n",
+    "            na_values=['#N/A', '#N/A N/A', '#NA', '-1.#IND', '-1.#QNAN', '-NaN', '-nan', '1.#IND', '1.#QNAN', '<NA>', 'N/A', 'NULL', 'NaN', 'None', 'n/a', 'nan', 'null']\n",
+    "        )\n",
+    "        tickers_day_i = tickers_day_i[[\"ticker\", \"name\", \"active\", \"cik\", \"composite_figi\", \"type\"]]\n",
+    "        tickers_day_i = tickers_day_i[tickers_day_i[\"active\"] == True]\n",
+    "        tickers_day_i.reset_index(inplace=True, drop=True)\n",
+    "\n",
+    "        # Preliminary check: no duplicates\n",
+    "        if our_tickers[[\"ticker\", \"name\", \"active\", \"cik\", \"composite_figi\", \"type\"]].duplicated().all():\n",
+    "            raise Exception(\"There are duplicates!\")\n",
+    "\n",
+    "        if tickers_day_i[[\"ticker\", \"name\", \"active\", \"cik\", \"composite_figi\", \"type\"]].duplicated().all():\n",
+    "            raise Exception(\"There are duplicates!\")\n",
+    "\n",
+    "        # DELISTINGS\n",
+    "        indicator_delisted = our_tickers[[\"ticker\", \"name\", \"active\", \"cik\", \"composite_figi\", \"type\"]].merge(tickers_day_i[[\"ticker\", \"name\", \"active\", \"cik\", \"composite_figi\", \"type\"]], on=[\"ticker\", \"name\", \"active\", \"cik\", \"composite_figi\", \"type\"], how='left', indicator=True)\n",
+    "\n",
+    "        indicator_delisted['_merge'] = np.where(our_tickers[\"active\"], indicator_delisted['_merge'], \"both\") # ERROR FIX: If in our ticker list we have already set it inactive, it should not be added to the list of delisted stocks again. By setting _merge to \"both\" we skip the already inactive stocks.\n",
+    "\n",
+    "        indicator_delisted = indicator_delisted[\"_merge\"] # Only get the indicator\n",
+    "        delisted_tickers = our_tickers[indicator_delisted == \"left_only\"]\n",
+    "\n",
+    "        # NEW LISTINGS\n",
+    "        indicator_new = tickers_day_i[[\"ticker\", \"name\", \"active\", \"cik\", \"composite_figi\", \"type\"]].merge(our_tickers[[\"ticker\", \"name\", \"active\", \"cik\", \"composite_figi\", \"type\"]], on=[\"ticker\", \"name\", \"active\", \"cik\", \"composite_figi\", \"type\"], \n",
+    "                        how='left', indicator=True)\n",
+    "        indicator_new = indicator_new[\"_merge\"]\n",
+    "        new_tickers = tickers_day_i[indicator_new == \"left_only\"]\n",
+    "\n",
+    "        # PROCESS DELISTINGS\n",
+    "        previous_day = market_days[market_days.index(day) - 1] # Getting previous trading day\n",
+    "        our_tickers.loc[indicator_delisted == \"left_only\", \"end_date\"] = previous_day\n",
+    "        our_tickers.loc[indicator_delisted == \"left_only\", \"active\"] = False\n",
+    "        \n",
+    "        # PROCESS NEW LISTINGS\n",
+    "        our_tickers = pd.concat([our_tickers, new_tickers])\n",
+    "\n",
+    "        our_tickers.reset_index(inplace=True, drop=True)\n",
+    "        our_tickers['start_date'].fillna(value=day, inplace=True)\n",
+    "        \n",
+    "        # Final checks\n",
+    "        if our_tickers[[\"ticker\", \"name\", \"active\", \"type\", \"start_date\"]].isnull().values.any():\n",
+    "            #null_data = our_tickers[our_tickers[[\"ticker\", \"name\", \"active\", \"type\", \"start_date\"]].isnull().any(axis=1)]\n",
+    "            raise Exception(\"There are missing values.\")\n",
+    "        \n",
+    "        print(f'{day.isoformat()}: Amount of stocks {len(our_tickers)}')\n",
+    "        \n",
+    "        # Finalize\n",
+    "        if day == last_trading_date_before_end_date:\n",
+    "            our_tickers[\"end_date\"].fillna(value=last_trading_date_before_end_date, inplace=True)\n",
+    "            our_tickers = our_tickers.sort_values(by=[\"ticker\", \"end_date\"]).reset_index(drop=True)\n",
+    "            our_tickers[[\"ticker\", \"name\", \"active\", \"start_date\", \"end_date\", \"type\", \"cik\", \"composite_figi\"]].to_csv(\"../data/tickers_v1.csv\")"
+   ]
   }
  ],
  "metadata": {
