--- a/04_ETPs.ipynb
+++ b/04_ETPs.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "2       NaN  ETF  0001100663   BBG000BWC7P0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,12 +232,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then add the ETPs to <code>tickers_v2</code> to get <code>tickers_v3</code>."
+    "We need to manually change VXX and UVIX start date. The <code>get_ticker_events</code> is incorrect."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tickers_ETP.loc[tickers_ETP['ticker'] == 'VXX', \"start_date\"] = date(2019, 1, 1)\n",
+    "tickers_ETP.loc[tickers_ETP['ticker'] == 'UVIX', \"start_date\"] = date(2022, 3, 30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then add the ETPs to <code>tickers_v2</code> to get <code>tickers_v3</code>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +291,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8188</th>\n",
+       "      <th>8192</th>\n",
        "      <td>GLD-2019-01-01</td>\n",
        "      <td>GLD</td>\n",
        "      <td>SPDR Gold Trust, SPDR Gold Shares</td>\n",
@@ -286,7 +303,7 @@
        "      <td>BBG000CRF6Q8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8189</th>\n",
+       "      <th>8193</th>\n",
        "      <td>SLV-2019-01-01</td>\n",
        "      <td>SLV</td>\n",
        "      <td>iShares Silver Trust</td>\n",
@@ -298,7 +315,7 @@
        "      <td>BBG000NDCRW7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8190</th>\n",
+       "      <th>8194</th>\n",
        "      <td>$VIX-2019-01-01</td>\n",
        "      <td>$VIX</td>\n",
        "      <td>VIX Index</td>\n",
@@ -315,17 +332,17 @@
       ],
       "text/plain": [
        "                   ID ticker                               name  active  \\\n",
-       "8188   GLD-2019-01-01    GLD  SPDR Gold Trust, SPDR Gold Shares    True   \n",
-       "8189   SLV-2019-01-01    SLV               iShares Silver Trust    True   \n",
-       "8190  $VIX-2019-01-01   $VIX                          VIX Index    True   \n",
+       "8192   GLD-2019-01-01    GLD  SPDR Gold Trust, SPDR Gold Shares    True   \n",
+       "8193   SLV-2019-01-01    SLV               iShares Silver Trust    True   \n",
+       "8194  $VIX-2019-01-01   $VIX                          VIX Index    True   \n",
        "\n",
        "      start_date    end_date   type         cik composite_figi  \n",
-       "8188  2019-01-01  2023-09-01    ETV  0001222333   BBG000CRF6Q8  \n",
-       "8189  2019-01-01  2023-09-01    ETV  0001330568   BBG000NDCRW7  \n",
-       "8190  2019-01-01  2023-09-01  INDEX         NaN            NaN  "
+       "8192  2019-01-01  2023-09-01    ETV  0001222333   BBG000CRF6Q8  \n",
+       "8193  2019-01-01  2023-09-01    ETV  0001330568   BBG000NDCRW7  \n",
+       "8194  2019-01-01  2023-09-01  INDEX         NaN            NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
