--- a/06_download_bars.ipynb
+++ b/06_download_bars.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "Downloading outside of market hours is much faster.\n",
     "\n",
-    "So instead of csv's we use <code>Parquet</code>. This saves a lot of disk space while sacrificing human readibility. Although you can just use [tad](https://www.tadviewer.com/) or [ParquetViewer](https://github.com/mukunku/ParquetViewer/releases). And pandas already supports reading from Parquet files. \n",
+    "So instead of csv's we use <code>Parquet</code>. This saves a lot of disk space while sacrificing human readibility. Although you can just use [tad](https://www.tadviewer.com/) (fastparquet) or [ParquetViewer](https://github.com/mukunku/ParquetViewer/releases) (pyarrow). And pandas already supports reading from Parquet files. \n",
     "\n",
     "In <code>06_fastparquet.ipynb</code> you can see a comparison between parquet compression algorithms and csv's. We save more than 50% in disk space, while write speeds are more than x7.\n",
     "\n",
@@ -47,17 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Progress: 14.1% | ETA: 15 hours and 30 minutes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tickers = get_tickers(v=3)\n",
     "tickers = tickers[tickers[\"type\"].isin([\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])]\n",
@@ -70,7 +62,7 @@
     "downloaded_days = timedelta(0)\n",
     "\n",
     "for index, row in tickers.iterrows():\n",
-    "    if index < 317:\n",
+    "    if index < 4385:\n",
     "        continue\n",
     "\n",
     "    id = row[\"ID\"]\n",
@@ -97,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,9 +103,11 @@
    "source": [
     "**Parallel approach (may not work now)**\n",
     "\n",
-    "The Polygon API uses the <code>requests</code> library which does not support asynchrounous processing. So I have to use <code>aiohttp</code> and work with raw requests. Also we have to bother with pagination because of the 50000 limit.\n",
+    "The Polygon API uses the <code>requests</code> library which does not support asynchronous processing. So I have to use <code>aiohttp</code> and work with raw requests. Also we have to bother with pagination because of the 50000 limit.\n",
     "\n",
-    "I used ChatGPT to convert the code above to work with aiohttp. However it did not work. After manually debugging, I got it working and the file is now in <code>06_parallel.py</code>. You can specify the maximum amount of parallel requests. Setting it to 10 should make downloading 10 times faster. Be wary to not generate too many requests."
+    "I used ChatGPT to convert the code above to work with aiohttp. However it did not work. After manually debugging, I got it working and the file is now in <code>06_parallel.py</code>. You can specify the maximum amount of parallel requests. Setting it to 10 should make downloading 10 times faster. Be wary to not generate too many requests.\n",
+    "\n",
+    "By the way, it is possible to run multiple python notebook files in VSCode. Simply copy this file multiple times, filter on <code>index</code> and run them all. This speeds it up, because the bottleneck is not processing power but the speed of a request."
    ]
   },
   {
