--- a/06_fastparquet.ipynb
+++ b/06_fastparquet.ipynb
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Snappy (50 million row groups): 2.5s"
+    "Snappy (default row groups of 50 million): 2.5s"
    ]
   },
   {
@@ -318,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We compare appending data versus reading + concatenating + writing. We will add A-2019-01-01 to AAPL-2019-01-01 to create AAAPL.parquet."
+    "We compare appending data versus reading + concatenating + writing. We will add A-2019-01-01 to AAPL-2019-01-01 together."
    ]
   },
   {
@@ -346,7 +346,7 @@
    "outputs": [],
    "source": [
     "from fastparquet import write\n",
-    "write(DATA_PATH + f\"raw/m1 (fastparquet snappy 25000)/A-AAPL.parquet\", update, append=True)"
+    "write(DATA_PATH + f\"raw/m1 (fastparquet snappy 25000)/AAPL-copy.parquet\", update, append=True)"
    ]
   },
   {
@@ -367,7 +367,7 @@
     "DATA_PATH + f\"raw/m1 (fastparquet snappy 25000)/AAPL-2019-01-01.parquet\")\n",
     "original = original.read().to_pandas()\n",
     "\n",
-    "pd.concat([original, update]).to_parquet(DATA_PATH + f\"raw/m1 (fastparquet snappy 25000)/RCW-AAPL.parquet\", engine=\"fastparquet\", compression='snappy', row_group_offsets=2500) #  row_group_size=25000\n"
+    "pd.concat([original, update]).to_parquet(DATA_PATH + f\"raw/m1 (fastparquet snappy 25000)/A-AAPL.parquet\", engine=\"fastparquet\", compression='snappy', row_group_offsets=2500) #  row_group_size=25000\n"
    ]
   },
   {
