--- a/02_market_hours.ipynb
+++ b/02_market_hours.ipynb
@@ -10,11 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#####\n",
+    "###\n",
     "from polygon.rest import RESTClient\n",
     "from datetime import datetime, date, time, timedelta\n",
     "from pytz import timezone\n",
@@ -29,7 +29,7 @@
     "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
     "\n",
     "START_DATE = date(2019, 1, 1)\n",
-    "END_DATE = date(2023, 9, 1)\n",
+    "END_DATE = date(2023, 9, 7)\n",
     "\n",
     "with open(POLYGON_DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,9 @@
    "metadata": {},
    "source": [
     "# 2.3 Updates\n",
-    "To update the market calendar, simply rerun this file."
+    "1. Update END_DATE.\n",
+    "2. Update the list of <code>early_closes</code>.\n",
+    "3. Run the 3 ### cells in 2.1."
    ]
   },
   {
