Updating now works up until notebook #6

--- a/04_ETPs.ipynb
+++ b/04_ETPs.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
     "\n",
     "START_DATE = date(2019, 1, 1)\n",
-    "END_DATE = date(2023, 9, 1)\n",
+    "END_DATE = date(2023, 9, 7)\n",
     "\n",
     "with open(POLYGON_DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "2       NaN  ETF  0001100663   BBG000BWC7P0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,12 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tickers_ETP.loc[tickers_ETP['ticker'] == 'VXX', \"start_date\"] = date(2019, 1, 1)\n",
-    "tickers_ETP.loc[tickers_ETP['ticker'] == 'UVIX', \"start_date\"] = date(2022, 3, 30)"
+    "###\n",
+    "tickers_ETP.loc[tickers_ETP['ticker'] == 'VXX', \"start_date\"] = max(date(2009, 1, 29), START_DATE)\n",
+    "tickers_ETP.loc[tickers_ETP['ticker'] == 'UVIX', \"start_date\"] = max(date(2022, 3, 30), START_DATE)"
    ]
   },
   {
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -291,37 +292,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8192</th>\n",
+       "      <th>8409</th>\n",
        "      <td>GLD-2019-01-01</td>\n",
        "      <td>GLD</td>\n",
        "      <td>SPDR Gold Trust, SPDR Gold Shares</td>\n",
        "      <td>True</td>\n",
        "      <td>2019-01-01</td>\n",
-       "      <td>2023-09-01</td>\n",
+       "      <td>2023-09-07</td>\n",
        "      <td>ETV</td>\n",
        "      <td>0001222333</td>\n",
        "      <td>BBG000CRF6Q8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8193</th>\n",
+       "      <th>8410</th>\n",
        "      <td>SLV-2019-01-01</td>\n",
        "      <td>SLV</td>\n",
        "      <td>iShares Silver Trust</td>\n",
        "      <td>True</td>\n",
        "      <td>2019-01-01</td>\n",
-       "      <td>2023-09-01</td>\n",
+       "      <td>2023-09-07</td>\n",
        "      <td>ETV</td>\n",
        "      <td>0001330568</td>\n",
        "      <td>BBG000NDCRW7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8194</th>\n",
+       "      <th>8411</th>\n",
        "      <td>$VIX-2019-01-01</td>\n",
        "      <td>$VIX</td>\n",
        "      <td>VIX Index</td>\n",
        "      <td>True</td>\n",
        "      <td>2019-01-01</td>\n",
-       "      <td>2023-09-01</td>\n",
+       "      <td>2023-09-07</td>\n",
        "      <td>INDEX</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -332,17 +333,17 @@
       ],
       "text/plain": [
        "                   ID ticker                               name  active  \\\n",
-       "8192   GLD-2019-01-01    GLD  SPDR Gold Trust, SPDR Gold Shares    True   \n",
-       "8193   SLV-2019-01-01    SLV               iShares Silver Trust    True   \n",
-       "8194  $VIX-2019-01-01   $VIX                          VIX Index    True   \n",
+       "8409   GLD-2019-01-01    GLD  SPDR Gold Trust, SPDR Gold Shares    True   \n",
+       "8410   SLV-2019-01-01    SLV               iShares Silver Trust    True   \n",
+       "8411  $VIX-2019-01-01   $VIX                          VIX Index    True   \n",
        "\n",
        "      start_date    end_date   type         cik composite_figi  \n",
-       "8192  2019-01-01  2023-09-01    ETV  0001222333   BBG000CRF6Q8  \n",
-       "8193  2019-01-01  2023-09-01    ETV  0001330568   BBG000NDCRW7  \n",
-       "8194  2019-01-01  2023-09-01  INDEX         NaN            NaN  "
+       "8409  2019-01-01  2023-09-07    ETV  0001222333   BBG000CRF6Q8  \n",
+       "8410  2019-01-01  2023-09-07    ETV  0001330568   BBG000NDCRW7  \n",
+       "8411  2019-01-01  2023-09-07  INDEX         NaN            NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,6 +357,19 @@
     "tickers_v3.to_csv(\"../data/tickers_v3.csv\") \n",
     "tickers_v3.tail(3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4.2 Updates\n",
+    "Run everything."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
