--- a/06_download_bars.ipynb
+++ b/06_download_bars.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Downloading raw prices\n",
+    "# 6.1 Downloading raw prices\n",
     "Because we already created functions in notebook 1 to download 1-minute tickers, this is easy. We need to keep in mind that a lot of stocks such as SPACs have almost no price data. So there are a lot of empty bars. Some stocks don't even have 1 trade for the entire day. However, I cannot remove them either. Because if for one week the stock has a lot of activity, my trading systems may still trade it. That is the curse of the HTB small caps space. I cannot just filter on monthly liquidity."
    ]
   },
@@ -14,13 +14,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "###\n",
     "from polygon.rest import RESTClient\n",
     "from datetime import datetime, date, time, timedelta\n",
-    "from utils import get_tickers, download_m1_raw_data, datetime_to_unix\n",
-    "import pytz\n",
-    "import requests\n",
+    "from utils import get_tickers, download_m1_raw_data\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "from fastparquet import write\n",
     "\n",
     "DATA_PATH = \"../data/polygon/\"\n",
     "\n",
@@ -114,14 +113,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Updates\n",
-    "Not implemented."
+    "# 6.2 Updates\n",
+    "Run the first cell to import the modules and then run the cells below.\n",
+    "\n",
+    "Loop through tickers_v3:\n",
+    "- If the ID is in <code>tickers_v3_old</code> and <code>end_date</code> is larger than the old end date, then we can simply append the raw data.\n",
+    "- If the ID is not in <code>tickers_v3</code>, we need to create a new file.\n",
+    "\n",
+    "All other tickers are those that have been delisted and need no updating."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "old_tickers_v3 = pd.read_csv(\"../data/tickers_v3_old.csv\", index_col = 0)\n",
+    "old_tickers_v3 = old_tickers_v3[old_tickers_v3[\"type\"].isin([\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])]\n",
+    "old_tickers_v3.reset_index(inplace=True, drop=True)\n",
+    "old_tickers_v3['end_date'] = pd.to_datetime(old_tickers_v3['end_date']).dt.date\n",
+    "old_end_date = old_tickers_v3['end_date'].max()\n",
+    "old_IDs = list(old_tickers_v3['ID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updating BFRI-2021-10-29\n",
+      "Updating BFS-2019-01-01\n",
+      "Updating BFST-2019-01-01\n"
+     ]
+    }
+   ],
+   "source": [
+    "tickers = get_tickers(v=3)\n",
+    "tickers = tickers[tickers[\"type\"].isin([\"CS\", \"ADRC\", \"ETF\", \"ETN\", \"ETV\"])]\n",
+    "tickers.reset_index(inplace=True, drop=True)\n",
+    "counter = 0\n",
+    "for index, row in tickers.iterrows():\n",
+    "    id = row[\"ID\"]\n",
+    "    ticker = row[\"ticker\"]\n",
+    "    start_date = row[\"start_date\"]\n",
+    "    end_date = row[\"end_date\"]\n",
+    "\n",
+    "    if id in old_IDs and end_date > old_end_date:\n",
+    "        update = download_m1_raw_data(ticker = ticker, from_ = old_end_date + timedelta(days=1), to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], path = None, client=client)\n",
+    "        if update is not None:\n",
+    "            write(DATA_PATH + f\"raw/m1/{id}.parquet\", update, append=True)\n",
+    "            print(f'Updating {id}')\n",
+    "\n",
+    "    elif id not in old_IDs:\n",
+    "        download_m1_raw_data(ticker = ticker, from_ = row[\"start_date\"], to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], path = DATA_PATH + f\"raw/m1/{id}.parquet\", client=client)\n",
+    "        print(f'Downloading {id}')"
+   ]
   }
  ],
  "metadata": {
