--- a/08_process.ipynb
+++ b/08_process.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5.1 Processing raw data\n",
+    "# 8.1 Processing raw data\n",
     "This section combines the raw data, the adjustments and cleaned bars to get processed 1-minute data. After processing we also detect the halts to create a <code>halted</code> flag. There are no gaps for processed data. All stocks that are active on a certain day have minute bars for every minute, from pre to post market, even if no trades took place. Empty bars are forward filled. Only for the first day, backwards filling may be done.\n",
     "\n",
     "The steps:\n",
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.1 Split adjustment"
+    "# 8.2 Split adjustment"
    ]
   },
   {
@@ -610,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5.2 Dividend adjustment\n",
+    "# 8.3 Dividend adjustment\n",
     "There is no single way to adjust for dividends. We use the [stockcharts](https://support.stockcharts.com/doku.php?id=policies:historical_price_data_is_adjusted_for_splits_dividends_and_distributions#:~:text=Dividend%20Adjustment%20Calculation%20Details%3A,then%20multiplied%20by%20this%20factor) or [Yahoo](https://help.yahoo.com/kb/SLN28256.html) method, which mimics dividend reinvesting at the close of cum-dividend date. If at cum-dividend the price is 60, and at ex-dividend is 50 after a 10/share dividend, then all prices from cum-dividend and before are adjusted by the factor *1 - (dividend/cumdividend close)*. So the adjusted cum-dividend close will be 50. \n",
     "\n",
     "Note: Even though the close (which can differ on early close days) is used to calculate the adjustment factor, the post-market prices also have to be adjusted. "
@@ -1159,7 +1159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5.3 Reindexing and NA values"
+    "# 8.4 Reindexing and NA values"
    ]
   },
   {
@@ -1350,7 +1350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5.4 Halt detection\n",
+    "# 8.5 Halt detection\n",
     "We cannot detect all halts without tick data. However we are not interested in pre- and post-market halts anyways. We care about the liquid stocks that are halted intraday and have decent volume. Halts take a minimum of 5 minutes. This means at least 4 OHLC 1-minutes bars with no data, because a halt can start *during* the OHLC bar.\n",
     "\n",
     "For each stock where the turnover is more than 2.5 million dollars we will check whether there are 4 empty bars during regular hours. Illiquid stocks do not trade all minutes and may be incorrectly flagged. This happens quite often making the 'halted' flag useless. Currently 'halted' only means 'suspicious'.\n",
@@ -1447,7 +1447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5.5 Putting it all in a loop\n",
+    "# 8.6 Putting it all in a loop\n",
     "It took me 8 hours to run. The files take up 35GB for data from 2019-01-01 to 2023-09-01.\n",
     "\n",
     "**Manually fixed errors in adjustments**\n",
