--- a/05_adjustments.ipynb
+++ b/05_adjustments.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,18 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = \"../data/polygon/\"\n",
+    "POLYGON_DATA_PATH = \"../data/polygon/\"\n",
     "\n",
     "START_DATE = date(2019, 1, 1)\n",
-    "END_DATE = date(2023, 9, 1)\n",
+    "END_DATE = date(2023, 9, 7)\n",
     "\n",
-    "CLEAN_DOWNLOAD = True # If False, only update existing data to the END_DATE. If True, remove all files in adjustments/.\n",
+    "CLEAN_DOWNLOAD = False # If False, only update existing data to the END_DATE. If True, remove all files in adjustments/.\n",
     "\n",
-    "with open(DATA_PATH + \"secret.txt\") as f:\n",
+    "with open(POLYGON_DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
     "\n",
     "client = RESTClient(api_key=KEY)"
@@ -49,35 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MaxRetryError(\"HTTPSConnectionPool(host='api.polygon.io', port=443): Max retries exceeded with url: /v3/reference/dividends?ticker=SMRT&ex_dividend_date.lte=2020-08-21&ex_dividend_date.gte=2019-01-01 (Caused by NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x0000020387E753D0>: Failed to establish a new connection: [WinError 10061] No connection could be made because the target machine actively refused it'))\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Loop through all tickers\n",
+    "tickers_to_process = []\n",
     "tickers_v3 = get_tickers(v=3)\n",
     "\"\"\"\n",
-    "To keep track of what the date range is from our adjustments folder, we save the start and end date in start_and_end_date.txt.\n",
-    "The first line is the start date and the second is the end date.\n",
+    "To keep track of which dates the adjustments folder has, we save the end date to _end_date.txt.\n",
     "\"\"\"\n",
     "\n",
     "# Use a different START_DATE if we only want to update\n",
     "if not CLEAN_DOWNLOAD:\n",
-    "    if os.path.isfile(DATA_PATH + \"raw/adjustments/start_and_end_date.txt\"):\n",
-    "        with open(DATA_PATH + \"secret.txt\") as f:\n",
-    "            ORIGINAL_START_DATE = next(f).strip()\n",
-    "            \n",
+    "    if os.path.isfile(POLYGON_DATA_PATH + \"raw/adjustments/_end_date.txt\"):\n",
+    "        with open(POLYGON_DATA_PATH + \"raw/adjustments/_end_date.txt\") as f:\n",
     "            end_date_of_data = next(f).strip()\n",
-    "            START_DATE = first_trading_date_after_equal(end_date_of_data)\n",
+    "            START_DATE = first_trading_date_after_equal(date.fromisoformat(end_date_of_data) + timedelta(days=1))\n",
     "    else:\n",
-    "        raise Exception('There is no start_and_end_date.txt file!')\n",
+    "        raise Exception('There is no _end_date.txt file!')\n",
     "        \n",
     "for index, row in tickers_v3.iterrows():\n",
     "    ticker = row[\"ticker\"]\n",
@@ -113,6 +103,9 @@
     "    if splits.empty and dividends.empty:\n",
     "        continue\n",
     "\n",
+    "    # Store which stocks we need to split/div adjust\n",
+    "    tickers_to_process.append(ticker)\n",
+    "\n",
     "    # Merge dividends and splits\n",
     "    adjustments = pd.concat([dividends, splits])\n",
     "    adjustments = adjustments.sort_values(by='date').reset_index(drop=True)\n",
@@ -123,7 +116,7 @@
     "        raise Exception(f\"There are missing values for {ticker} at index {index}.\")\n",
     "\n",
     "    # Save or update\n",
-    "    path = DATA_PATH + f'raw/adjustments/{ticker}.csv'\n",
+    "    path = POLYGON_DATA_PATH + f'raw/adjustments/{ticker}.csv'\n",
     "\n",
     "    # If file exists, add new adjustments. This happens if a ticker is recycled or we are updating and the stock already has a history of adjustments.\n",
     "    if os.path.isfile(path):\n",
@@ -135,15 +128,24 @@
     "        all_adjustments.to_csv(path, index=False)\n",
     "    else:\n",
     "        adjustments.to_csv(path, index=False)\n",
+    "    \n",
+    "    print(index)\n",
     "\n",
-    "# Create start_and_end_date.txt file that has the start/end dates.\n",
-    "with open(DATA_PATH + \"raw/adjustments/start_and_end_date.txt\", 'w') as f:\n",
-    "    if CLEAN_DOWNLOAD:\n",
-    "        f.write(f'{START_DATE}\\n')\n",
-    "        f.write(f'{END_DATE}\\n')\n",
-    "    else:\n",
-    "        f.write(f'{ORIGINAL_START_DATE}\\n')\n",
-    "        f.write(f'{END_DATE}\\n')"
+    "# Set the END_DATE to end_date.txt\n",
+    "with open(POLYGON_DATA_PATH + \"raw/adjustments/_end_date.txt\", 'w') as f:\n",
+    "    f.write(f'{END_DATE}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "with open(POLYGON_DATA_PATH + f'raw/adjustments/_tickers_to_process.csv', 'w') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(tickers_to_process)"
    ]
   },
   {
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -191,66 +193,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2019-03-28</th>\n",
-       "      <td>DIV</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-06-28</th>\n",
-       "      <td>DIV</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-09-27</th>\n",
-       "      <td>DIV</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-27</th>\n",
-       "      <td>DIV</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-29</th>\n",
-       "      <td>DIV</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-29</th>\n",
-       "      <td>DIV</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-30</th>\n",
-       "      <td>DIV</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-06-29</th>\n",
-       "      <td>DIV</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-09-29</th>\n",
-       "      <td>DIV</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-30</th>\n",
-       "      <td>DIV</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>0.44</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-03-21</th>\n",
        "      <td>DIV</td>\n",
@@ -300,16 +242,6 @@
       "text/plain": [
        "             type subtype  amount\n",
        "date                             \n",
-       "2019-03-28    DIV      CD    0.80\n",
-       "2019-06-28    DIV      CD    0.80\n",
-       "2019-09-27    DIV      CD    0.80\n",
-       "2019-12-27    DIV      CD    0.80\n",
-       "2020-09-29    DIV      CD    0.20\n",
-       "2020-12-29    DIV      CD    0.30\n",
-       "2021-03-30    DIV      CD    0.30\n",
-       "2021-06-29    DIV      CD    0.40\n",
-       "2021-09-29    DIV      CD    0.40\n",
-       "2021-12-30    DIV      CD    0.44\n",
        "2022-03-21    DIV      CD    0.44\n",
        "2022-04-05  SPLIT       R    4.00\n",
        "2022-06-29    DIV      CD    0.44\n",
@@ -319,18 +251,18 @@
        "2023-06-29    DIV      CD    0.35"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv(DATA_PATH + \"raw/adjustments/MFA.csv\", index_col=\"date\")"
+    "pd.read_csv(POLYGON_DATA_PATH + \"raw/adjustments/MFA.csv\", index_col=\"date\").tail(7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -389,13 +321,13 @@
        "2022-08-25  SPLIT       N  0.333333"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv(DATA_PATH + \"raw/adjustments/TSLA.csv\", index_col=\"date\")"
+    "pd.read_csv(POLYGON_DATA_PATH + \"raw/adjustments/TSLA.csv\", index_col=\"date\")"
    ]
   },
   {
@@ -403,15 +335,10 @@
    "metadata": {},
    "source": [
     "### Updates\n",
-    "Simply rerun the file with the correct <code>END_DATE</code> and set <code>CLEAN_DOWNLOAD</code> to False."
+    "Simply rerun the file with the correct <code>END_DATE</code> and set <code>CLEAN_DOWNLOAD</code> to False. The code is already structured in such a way that only the necessary is downloaded. The tickers that we need to process (thus that had new split/dividend data) are stored in <code>raw/adjustments/tickers_to_process.csv</code>.\n",
+    "\n",
+    "This will take around 20 minutes."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
